# manox

./: .gitignore  CLAUDE.md  Cargo.toml  UI-MAP.md  rust-toolchain.toml
crates/agent/: Cargo.toml  build.rs
crates/agent-ui/: Cargo.toml
crates/agent-ui/src/: assets.rs  browser_host.rs  cockpit.rs  conversation.rs  dispatch.rs  editor.rs  external_session.rs  git_status.rs  lib.rs  slash_command.rs  workspace.rs
crates/agent-ui/src/harness/: bridge.rs  mod.rs  test_support.rs  tests.rs  types.rs
crates/agent-ui/src/views/: braille_spinner.rs  browser_view.rs  completion.rs  composer.rs  composer_menu.rs  context_rail.rs  management_shell.rs  member_panel.rs  message.rs  mod.rs  outline.rs  plugin_manager.rs  popup_menu.rs  settings.rs  sidebar.rs  subagent_panel.rs  title_menu.rs  turn_navigator.rs
crates/agent-ui/src/views/settings/: mod.rs  panels.rs
crates/agent-ui/tests/: scroll_justify.rs  scroll_list.rs
crates/agent/examples/: context_replay.rs
crates/agent/locales/: en.ftl  zh-CN.ftl
crates/agent/src/: agent_def.rs  approval.rs  background_task.rs  claude_md.rs  collaboration_mode.rs  command.rs  compact.rs  compact_prompt.md  db.rs  frontmatter.rs  goal.rs  hook.rs  i18n.rs  image.rs  language.rs  language_model.rs  lib.rs  mcp.rs  message.rs  model_alias.rs  optimizer.rs  path_env.rs  paths.rs  plan.rs  plugin.rs  prefix_stability.rs  proposed_plan.rs  read_policy.rs  replay.rs  retention.rs  runtime.rs  sandbox.rs  settings.rs  skill.rs  system_prompt.en.md  system_prompt.md  system_prompt.rs  system_prompt.zh-CN.md  thread.rs  thread_store.rs  (+6 more)
crates/agent/src/agents/: explore.md  plan.md
crates/agent/src/commands/: healthz.md
crates/agent/src/db/: events.rs  goals.rs  mod.rs  projects.rs  terminals.rs  threads.rs  token_usage.rs  ui_notes.rs
crates/agent/src/hashline/: apply.rs  block.rs  hash.rs  integration_tests.rs  mod.rs  parser.rs  recovery.rs  snapshot.rs
crates/agent/src/lsp/: mod.rs  tools.rs
crates/agent/src/mcp/: config.rs  mod.rs  registry.rs  tool.rs
crates/agent/src/prompt/: data.rs  draft.rs  mod.rs  renderer.rs  template.rs
crates/agent/src/prompt/templates/en/mode/: default_instructions.md  goal.tera.md  ultracode.tera.md  unified_instructions.md
crates/agent/src/prompt/templates/en/side_call/: compact_final.tera.md
crates/agent/src/prompt/templates/en/system/: assembly.tera.md  main.tera.md
crates/agent/src/prompt/templates/en/title/: first.tera.md  topic_shift.tera.md
crates/agent/src/prompt/templates/en/tools/: agent_tool.tera.md
crates/agent/src/prompt/templates/en/wrapper/: compaction_preamble.tera.md  empty_turn_nudge.tera.md  goal_continuation.tera.md  max_tokens_directive.tera.md  max_turns_summary.tera.md  peer_message.tera.md  skill_body.tera.md  tool_denied.tera.md
crates/agent/src/prompt/templates/mode/: default_instructions.md  plan.tera.md  plan_instructions.md
crates/agent/src/prompt/templates/side_call/: approval_system.tera.md  goal_system.tera.md  goal_user.tera.md
crates/agent/src/prompt/templates/system/: assembly.tera.md
crates/agent/src/prompt/templates/wrapper/: ask_user_questions.tera.md  ask_user_response.tera.md  empty_turn_nudge.tera.md  enter_plan_mode.tera.md  instructions_eager.tera.md  instructions_lazy.tera.md  plan_approved.tera.md  plan_cancelled.tera.md  plan_continue.tera.md  recovery_failure.tera.md  unfulfilled_tool_intent_nudge.tera.md
crates/agent/src/prompt/templates/zh-CN/mode/: default_instructions.md  goal.tera.md  plan_instructions.md  ultracode.tera.md  unified_instructions.md
crates/agent/src/prompt/templates/zh-CN/side_call/: approval_system.tera.md  approval_user.tera.md  (+4 more)
crates/agent/src/provider/: anthropic.rs  anthropic_cache.rs  api_key.rs  completions.rs  config.rs  mod.rs  overflow.rs  registry.rs  responses.rs  retry.rs  sse.rs
crates/agent/src/team/: mod.rs  task_list.rs  tools.rs
crates/agent/src/tool/: permission.rs  plan_mode.rs
crates/agent/src/tools/: agent.rs  apply_patch.rs  ask_user.rs  background_shell.rs  bash.rs  bash_output.rs  code.rs  descriptions.rs  edit_file.rs  file_lock.rs  glob.rs  goal.rs  grep.rs  list_directory.rs  mod.rs  monitor.rs  path_selector.rs  read_file.rs  self_info.rs  skill.rs  task_stop.rs  tool_search.rs  truncate.rs  update_plan.rs  web_fetch.rs  websocket.rs  worktree.rs  write_file.rs
crates/agent/src/tools/descriptions/: en.json  zh-CN.json
crates/agent/src/tools/web_explore/: click.rs  close.rs  mod.rs  navigate.rs  open.rs  read_dom.rs  read_text.rs  screenshot.rs  scroll.rs  type_text.rs  yield_to_user.rs
crates/agent/tests/fixtures/: context_replay.json
crates/components/: Cargo.toml
crates/components/src/: lib.rs  turn_frame.rs
crates/components/src/markdown/: ast.rs  incremental.rs  mod.rs  rich_text.rs  selection.rs  terminal_panel.rs  theme.rs
crates/http_proxy/: Cargo.toml
crates/http_proxy/src/: allowlist.rs  lib.rs  proxy.rs
crates/http_proxy/src/proxy/: connection.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  lib.rs  proto.rs  registry.rs  spec.rs
crates/manox/: Cargo.toml
crates/manox/resources/: app-icon.icns  manox.entitlements
crates/manox/src/: about.rs  main.rs  mcp_server.rs
crates/manox/tests/: entitlements_macos.rs  mcp_smoke.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: bus.rs  lib.rs  proc.rs
crates/terminal/: Cargo.toml
crates/terminal-ui/: Cargo.toml
crates/terminal-ui/src/: element.rs  grid_renderer.rs  lib.rs  terminal_view.rs  theme.rs
crates/terminal/src/: cx_session.rs  event.rs  lib.rs  pty.rs  pty_source.rs  settings.rs  store.rs  term.rs
crates/terminal/src/mappings/: keys.rs  mod.rs  mouse.rs
crates/webview/: Cargo.toml
crates/webview-macros/: Cargo.toml
crates/webview-macros/src/: lib.rs
crates/webview-macros/tests/: macros.rs
crates/webview/src/: lib.rs  webview.rs
crates/webview/src/plugins/: clipboard.rs  dialog.rs  event.rs  mod.rs  opener.rs
crates/webview/src/scripts/browser/: notify.js  request.js
crates/webview/src/scripts/tauri/: bundle.global.js  ipc-protocol.js
(+41 files in other folders)
