# manox —— 进程内 native agent 工作台（按 zed agent 架构重新实现）。
#
# workspace 根。三 crate（镜像 zed 的 agent / agent_ui / zed 三分）：
#   - agent:     agent 逻辑核心（Thread + LanguageModel + tools + db，gpui-native，不依赖 gpui-component）
#   - agent-ui:  UI 层（Workspace + ConversationState + views，gpui + gpui-component）
#   - manox:     薄 bin（窗口 + 主题 + 接线）
#
# LLM 直连 ~/.config/cx/cx.providers.config.yaml 定义的 providers（不走 codex / Zed Cloud）。
#
# gpui 相关依赖严格对齐 gpui-component 锁定的 zed rev，保证 gpui 单一版本。
[workspace]
members = ["crates/agent", "crates/agent-ui", "crates/manox"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "process", "io-util"] }
tokio-util = "0.7"
libc = "0.2"
# brush: in-process bash-compatible shell used as the bash tool's execution engine.
brush-core = "0.5.0"
brush-builtins = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
globset = "0.4"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh32"] }
similar = "2"
base64 = "0.22"

rmcp = { version = "1.8", default-features = false }
toml = "0.8"
http = "1"

# i18n —— fluent + BCP47 LanguageIdentifier。仅 UI chrome 走 t!()；模型面向字符串一律英文，不经此栈。
fluent = "0.17"
unic-langid = "0.9"

# cx-providers —— provider 配置解析的单一事实来源（与 cx 共享）。锁 cx 仓库已合并的确定 rev。
cx-providers = { git = "https://github.com/dspo/cx.git", rev = "e210e4a1ab68f014f6535100c8652c05fa56639c" }

# GPUI 栈 —— git 仓库地址（规则允许）。gpui-component 锁定 zed rev 1d217ee，三者必须一致。
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }

# gpui-component（longbridge）
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1" }

# psm 用 stacker 的版本（对齐 gpui-component）
[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }

# gpui 在 debug 下也需要 opt-level 3，否则渲染极慢（对齐 gpui-component）
[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
