# manox —— 进程内 native agent 工作台。
#
# workspace 根。三 crate：
#   - agent:     agent 逻辑核心（Thread + LanguageModel + tools + db，gpui-native，不依赖 gpui-component）
#   - agent-ui:  UI 层（Workspace + ConversationState + views，gpui + gpui-component）
#   - manox:     薄 bin（窗口 + 主题 + 接线）
#
# LLM 直连 ~/.config/cx/cx.providers.config.yaml 定义的 providers。
#
# gpui 相关依赖严格对齐 gpui-component 锁定的 rev，保证 gpui 单一版本。
[workspace]
members = [
    "crates/agent",
    "crates/agent-ui",
    "crates/manox",
    "crates/terminal",
    "crates/terminal-ui",
    "crates/components",
    "crates/supervisor",
    "crates/lsp",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
# Workspace members — declared here so sub-crates reference them via
# `foo.workspace = true` instead of relative `path = "../foo"`.
agent = { path = "crates/agent" }
agent-ui = { path = "crates/agent-ui" }
manox = { path = "crates/manox" }
terminal = { path = "crates/terminal" }
terminal-ui = { path = "crates/terminal-ui" }
manox-components = { path = "crates/components" }
supervisor = { path = "crates/supervisor" }
lsp = { path = "crates/lsp" }

anyhow = "1"
async-channel = "2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "process", "io-util"] }
tokio-util = "0.7"
libc = "0.2"
# brush: in-process bash-compatible shell used as the bash tool's execution engine.
brush-core = "0.5.0"
brush-builtins = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
globset = "0.4"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh32"] }
similar = "2"
# markdown-rs (mdast) — markdown 解析。经 gpui-component 已在 Cargo.lock,workspace 声明复用同一版本。
markdown = "1"
# ropey — SyntaxHighlighter::update 接收 &Rope;版本对齐 gpui-component 在 Cargo.lock 锁定的 2.0.0-beta.1。
ropey = "2.0.0-beta.1"
base64 = "0.22"
# image —— clipboard image resize + PNG re-encode before sending to the provider
# (Anthropic long-edge cap 1568px / 5MB). CPU-bound work runs on the background executor.
image = "0.25"

rmcp = { version = "1.8", default-features = false }
# lsp-types —— LSP protocol types (InitializeParams, Location, Hover, ...). The
# wire framer is hand-rolled (see crates/lsp/src/proto.rs); this crate only
# supplies typed structs for the params/results we send and parse.
lsp-types = "0.97"
toml = "0.8"
http = "1"

# i18n —— fluent + BCP47 LanguageIdentifier。仅 UI chrome 走 t!()；模型面向字符串一律英文，不经此栈。
fluent = "0.17"
unic-langid = "0.9"

# cx-providers —— provider 配置解析的单一事实来源（与 cx 共享）。锁 cx 仓库已合并的确定 rev。
cx-providers = { git = "https://github.com/dspo/cx.git", rev = "7c811864aa2cd810dbe90bb5110d3dcb16203a42" }

# GPUI 栈 —— git 仓库地址（规则允许）。gpui-component 锁定 zed rev 1d217ee，三者必须一致。
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }

# gpui-component（longbridge）
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "1505b1487131adbb443f6c69e87847db35bfa2d1" }

# Terminal emulator stack. alacritty_terminal provides the Term/Grid/Selection
# data-structure layer (its own EventLoop/mio/tty are unused — manox drives the
# PTY via portable-pty and feeds bytes to `Processor::advance(&mut term, ..)`
# since `Term` itself implements `vte::ansi::Handler`). vte is not declared
# separately; it is re-exported by alacritty_terminal, keeping a single version.
alacritty_terminal = "0.24"
portable-pty = "0.9"
parking_lot = "0.12"

# psm 用 stacker 的版本（对齐 gpui-component）
[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }

# gpui 在 debug 下也需要 opt-level 3，否则渲染极慢（对齐 gpui-component）
[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
