[package]
name = "agent-ui"
edition.workspace = true
version.workspace = true
publish.workspace = true

[lib]
name = "agent_ui"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

agent.workspace = true
composer.workspace = true
terminal.workspace = true
terminal-ui.workspace = true

[features]
# In-process debug Harness + the `manox --mcp` server build on it. Off by
# default so a release build pulls in neither the Harness code nor the rmcp
# server; enable with `--features debug` (the `manox` crate forwards it).
debug = []

[dev-dependencies]
agent = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }

[lints.clippy]
dbg_macro = "deny"
