[package]
name = "agent-ui"
edition.workspace = true
version.workspace = true
publish.workspace = true

[lib]
name = "agent_ui"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
rust-embed.workspace = true

agent.workspace = true
terminal.workspace = true
terminal-ui.workspace = true
manox-components.workspace = true
open.workspace = true
manox-webview.workspace = true

# cx library —— `AgentBuilder` / `SessionHandle` to spawn external agent CLIs
# (claude/codex/copilot) and hold the PTY handle for an `ExternalSession`.
cx.workspace = true

[dev-dependencies]
agent = { workspace = true, features = ["test-support"] }
terminal = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }

[lints.clippy]
dbg_macro = "deny"
