[package]
name = "agent"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
brush-core = { workspace = true }
brush-builtins = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
globset.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
similar.workspace = true

gpui.workspace = true

[lints.clippy]
dbg_macro = "deny"
