[package]
name = "agent"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
brush-core = { workspace = true }
brush-builtins = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
cx-providers.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
zstd.workspace = true
uuid.workspace = true
chrono.workspace = true
globset.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
similar.workspace = true

gpui.workspace = true
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-child-process", "transport-streamable-http-client-reqwest"] }
toml.workspace = true
http.workspace = true
fluent.workspace = true
unic-langid.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints.clippy]
dbg_macro = "deny"
