[package]
name = "agent"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
# Exposes `thread_store::init_for_test` / `drop_for_test` (and the `TEST_OVERRIDE`
# slot they mutate) to downstream crates' test suites. Production builds keep
# these hidden so the global `ThreadStore` path is the only one reachable.
test-support = []

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
brush-core = { workspace = true }
brush-builtins = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
cx-providers.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
zstd.workspace = true
uuid.workspace = true
chrono.workspace = true
globset.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
similar.workspace = true
base64.workspace = true
image.workspace = true

gpui.workspace = true
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-child-process", "transport-streamable-http-client-reqwest"] }
supervisor.workspace = true
lsp.workspace = true
lsp-types.workspace = true
toml.workspace = true
http.workspace = true
fluent.workspace = true
unic-langid.workspace = true
tera.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints.clippy]
dbg_macro = "deny"
