[package]
name = "manox-components"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gpui.workspace = true
# Reuse the highlighter (SyntaxHighlighter + HighlightTheme) without buying into TextView.
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
# mdast parsing (markdown-rs). Already in Cargo.lock via gpui-component; the
# workspace declaration pins the same version.
markdown.workspace = true
# ropey::Rope is what SyntaxHighlighter::update consumes for syntax highlighting.
ropey.workspace = true
