[package]
name = "manox"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "manox"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

agent-ui = { path = "../agent-ui" }
agent = { path = "../agent" }
terminal = { path = "../terminal" }
terminal-ui = { path = "../terminal-ui" }

tracing-subscriber.workspace = true

# MCP server (`manox --mcp`): exposes the debug Harness over stdio so an
# external agent can drive the UI programmatically. `server` pulls in
# `transport-async-rw`; `transport-io` provides `rmcp::transport::stdio()`.
rmcp = { workspace = true, features = ["server", "transport-async-rw", "transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-channel.workspace = true
anyhow.workspace = true

[dev-dependencies]
# rmcp client (test-only): drives the `manox --mcp` subprocess over stdio.
# Features unify with the `server` set above only during test builds.
rmcp = { workspace = true, features = ["client", "transport-async-rw"] }
tokio.workspace = true
anyhow.workspace = true

[package.metadata.bundle]
identifier = "dev.dspo.manox"
name = "Manox"
icon = ["resources/app-icon.icns", "resources/app-icon@2x.png", "resources/app-icon.png"]
osx_minimum_system_version = "10.15.7"

[lints.clippy]
dbg_macro = "deny"
