[package]
name = "manox"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "manox"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

agent-ui = { path = "../agent-ui" }
agent = { path = "../agent" }
terminal = { path = "../terminal" }
terminal-ui = { path = "../terminal-ui" }

tracing.workspace = true
tracing-subscriber.workspace = true

[package.metadata.bundle]
identifier = "dev.dspo.manox"
name = "Manox"
icon = ["resources/app-icon.icns", "resources/app-icon@2x.png", "resources/app-icon.png"]
osx_minimum_system_version = "10.15.7"

[lints.clippy]
dbg_macro = "deny"
