[package]
name = "manox"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "manox"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

agent-ui.workspace = true
agent.workspace = true
terminal.workspace = true
terminal-ui.workspace = true
supervisor.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

# MCP server (`manox --mcp`): optional, pulled in only by the `debug` feature.
# `server` for the in-process server, `client` for the E2E smoke test, plus the
# stdio + async-rw transports. Off by default — a plain `cargo build` compiles
# neither `mcp_server` nor the rmcp crate.
rmcp = { workspace = true, features = [
    "server",
    "client",
    "transport-async-rw",
    "transport-io",
], optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
# Builds the in-process debug Harness + the `manox --mcp` stdio server. Off by
# default; enable with `--features debug` (also turns on `agent-ui/debug`).
debug = [
    "agent-ui/debug",
    "dep:rmcp",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:async-channel",
    "dep:anyhow",
]

[dev-dependencies]
# Test-only client driver for `manox/tests/mcp_smoke.rs`. The smoke test is
# gated on `feature = "debug"`, so this is only exercised under
# `cargo test --features debug`.
rmcp = { workspace = true, features = ["client", "transport-async-rw"] }
tokio.workspace = true
anyhow.workspace = true

[package.metadata.bundle]
identifier = "dev.dspo.manox"
name = "Manox"
icon = ["resources/app-icon.icns", "resources/app-icon@2x.png", "resources/app-icon.png"]
osx_minimum_system_version = "10.15.7"

[lints.clippy]
dbg_macro = "deny"
