[package]
name = "supervisor"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
async-channel.workspace = true
futures.workspace = true
tracing.workspace = true
libc.workspace = true

[lints.clippy]
dbg_macro = "deny"
