[package]
name = "terminal"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
tokio = { workspace = true }
libc = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

# Terminal data-structure layer: alacritty_terminal's Term/Grid/Selection/vi
# modules. Its EventLoop/mio/tty are unused — manox drives the PTY via
# portable-pty and feeds bytes through `Processor::advance`, since `Term`
# itself implements `vte::ansi::Handler`. vte is re-exported by alacritty.
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }

gpui.workspace = true
agent = { path = "../agent" }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints.clippy]
dbg_macro = "deny"
