[package]
name = "terminal"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
futures.workspace = true
tokio = { workspace = true }
libc = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

# Terminal data-structure layer: rmux-core's Screen/Grid/VT-parser domain
# model (pure in-memory, no OS/network deps). manox drives the Screen via
# `InputParser::parse(buf, &mut screen)` — the parser delegates screen writes
# through the `ScreenWriter` trait that `Screen` implements.
rmux-core = { workspace = true }
rmux-pty = { workspace = true }
rmux-types = { workspace = true }
rmux-proto = { workspace = true }

gpui.workspace = true
agent.workspace = true
toml.workspace = true

# cx library —— `SessionHandle` 驱动外部 agent CLI 的 PTY，供 `CxSessionSource` 包裹。
cx.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[features]
# Enables `store::init_for_test` / `drop_for_test` so cross-crate harness tests
# (agent-ui) can prime an in-memory `TerminalStore` and release it before
# teardown. Mirrors agent's `test-support` feature.
test-support = []

[lints.clippy]
dbg_macro = "deny"
