[package]
name = "manox-webview"
edition.workspace = true
version.workspace = true
publish.workspace = true

[lib]
name = "manox_webview"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
manox-webview-macros.workspace = true
wry.workspace = true
raw-window-handle.workspace = true
http.workspace = true
serialize-to-javascript.workspace = true
serde.workspace = true
serde_json.workspace = true
mime_guess.workspace = true
pollster.workspace = true
async-task.workspace = true
rfd.workspace = true
arboard.workspace = true
open.workspace = true

[lints.clippy]
dbg_macro = "deny"
